# rover_orchestrator

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: SafetyBT.btproj  safety.xml
include/rover_orchestrator/: behavior_tree_orchestrator.hpp  safety_orchestrator_node.hpp
include/rover_orchestrator/plugins/action/: call_set_bool_service_node.hpp  call_trigger_service_node.hpp
launch/: manager.launch.py  rover_orchestartor.launch.py
src/: safety_orchestrator_main.cpp  safety_orchestrator_node.cpp  safety_orchestrator_parameters.yaml
src/plugins/action/: call_set_bool_service_node.cpp  call_trigger_service_node.cpp
